tests/FSharp.Analyzers.Tests/data/virtualcall/negative/ListAverageOnList.fs
module M

let f () =
    let myList = [1.0 .. 10.0]
    List.average myList // should not warn
